# EasyGlobalRouter

./: .gitignore  CMakeLists.txt  README.md
output/: result1  result2  result3  result4
src/: global.h  main.cpp
src/db/: Database.cpp  Database.h  GCellGrid.cpp  GCellGrid.h  Net.cpp  Net.h
src/gr/: Router.cpp  Router.h  Rpath.h  Vertex.h
src/io/: parse_bkshf.cpp
src/utils/: log.cpp  log.h  log_level.h  utils.h
